--- a/index.html
+++ b/index.html
@@ -1,5 +1,62 @@
 <!DOCTYPE html>
 <html lang = en>
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Code Quiz!</title>
+    <link rel="stylesheet" href="assets/style.css">
+    <script src="assets/script.js"></script>
+</head>
 
+<div id="controls">
+    <div id="info">
+        <button id="scores" href="">View High Scores</button>
+        <div id="timer"><p>Time:<span id="time">0</span></p></div>
+    </div>
+</div>
+
+<div id="positionWrap">
+    <section id="intro">
+        <h1>Coding Quiz!</h1>
+        <p>Try to answer these questions on JavaScript within the time limit.
+            Incorrect answers will deduct points and time.
+        </p>
+        <button>Start Quiz</button>
+    </section>
+
+    <section id="quizHolder" class="hide">
+        <p id="title"></p>
+        <button></button>
+        <button></button>
+        <button></button>
+        <button></button>
+        <div id="userScore" class="hidden">
+            <p>&nbsp;</p>
+        </div>
+    </section>
+
+    <section id="finished" class="hide">
+        <h1>Quiz Completed!</h1>
+        <p>Your final score is&nbsp;<span id="score"></span></p>
+        <div id="scoreStorage">
+            <p>Enter initials:</p><input id="initials" type="text"> <button>Submit</button>
+        </div>
+        <div id="errorIndicator" class="hidden">
+            <p>&nbsp;</p>
+        </div>
+    </section>
+
+    <section id="highScores" class="hide">
+        <h1>High Scores</h1>
+        <div>
+
+        </div>
+        <button id="reset">Start Again</button>
+    </section>
+</div>
+
+<body>
+
+</body>
 </html>
