--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Code Quiz!</title>
     <link rel="stylesheet" href="assets/style.css">
     <script src="assets/script.js"></script>
+    <script src="assets/questions.js"></script>
 </head>
 
 <div id="controls">
