--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <div id="controls">
     <div id="info">
-        <button id="scores" href="">View High Scores</button>
+        <button id="view_scores" href="">View High Scores</button>
         <div id="timer"><p>Time:<span id="time">0</span></p></div>
     </div>
 </div>
@@ -21,9 +21,10 @@
     <section id="intro">
         <h1>Coding Quiz!</h1>
         <p>Try to answer these questions on JavaScript within the time limit.
-            Incorrect answers will deduct points and time.
         </p>
-        <button>Start Quiz</button>
+        <p>Incorrect answers will deduct points and time.
+        </p>
+        <button id="startQuizbtn">Start Quiz</button>
     </section>
 
     <section id="quizHolder" class="hide">
