--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </p>
         <p>Incorrect answers will deduct points and time.
         </p>
-        <button id="startQuizbtn">Start Quiz</button>
+        <button id="startQuizBtn">Start Quiz</button>
     </section>
 
     <section id="quizHolder" class="hide">
