--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
 
 <div id="controls">
     <div id="info">
-        <button id="view_scores" href="">View High Scores</button>
+        <button id="scores" href="">View High Scores</button>
         <div id="timer"><p>Time:<span id="time">0</span></p></div>
     </div>
 </div>
 
-<div id="positionWrap">
+<div id="pWrap">
     <section id="intro">
         <h1>Coding Quiz!</h1>
         <p>Try to answer these questions on JavaScript within the time limit.
         </p>
         <p>Incorrect answers will deduct points and time.
         </p>
-        <button id="startQuizBtn">Start Quiz</button>
+        <button>Start Quiz</button>
     </section>
 
     <section id="quizHolder" class="hide">
