--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 
 <div id="controls">
     <div id="info">
-        <button onclick id="scores" href="">High Scores</button>
         <div id="timer"><p>Time:<span id="time">0</span></p></div>
     </div>
 </div>
@@ -42,7 +41,7 @@
         <h1>Quiz Completed!</h1>
         <p>Your final score is&nbsp;<span id="score"></span></p>
         <div id="scoreStorage">
-            <p>Enter initials:</p><input id="initials" type="text"> <button>Submit</button>
+            <p>Enter initials:</p><input id="initials" type="text"> <button id = "scoreStorage">Submit</button>
         </div>
         <div id="errorIndicator" class="hidden">
             <p>&nbsp;</p>
